# MediaLink

Android/MediaLink/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Android/MediaLink/app/src/androidTest/java/android/jason/medialink/: ExampleInstrumentedTest.java
Android/MediaLink/app/src/main/: AndroidManifest.xml
Android/MediaLink/app/src/main/cpp/MediaLink/: SoundTouch-jni.cpp  common.hpp
Android/MediaLink/app/src/main/java/com/zzfordev/medialink/: Global.java  MainActivity.java  MediaUtil.java  Parameter.java  SoundTouch.java
Android/MediaLink/app/src/main/java/com/zzfordev/medialink/nodes/: Node.java  PcmReadNode.java  PcmWriteNode.java  SoundTouchNode.java  WavFileReadWriteNode.java
Android/MediaLink/app/src/main/java/com/zzfordev/medialink/nodes/audio/: AudioInputNode.java  AudioNode.java  AudioOutputNode.java
Android/MediaLink/app/src/main/java/com/zzfordev/medialink/ui/: LevelChanger.java  NodeBlock.java  NodeLink.java
Android/MediaLink/app/src/main/res/layout/: activity_main.xml  content_main.xml  medialink_dashboard.xml  soundtouch_params_settings.xml  test.xml
Android/MediaLink/app/src/main/res/menu/: menu_main.xml
Android/MediaLink/app/src/main/res/values/: strings.xml
Android/MediaLink/app/src/test/java/android/jason/medialink/: ExampleUnitTest.java
Android/MediaLink/gradle/wrapper/: gradle-wrapper.properties
